# zero2prod

./: Cargo.toml  flake.nix
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: auto-merge-dependabot-prs.yml  general.yml
migrations/: 20220323071726_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: error.rs  health_check.rs
