[package]
name = "zero2prod"
version = "0.1.0"
authors = [
  "Luca Palmieri <contact@lpalmieri.com>",
  "Alan Jenkins <alan.james.jenkins@gmail.com>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
config = "0.13"
reqwest = "0.11"
serde = { version = "1.0.200", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
