[package]
name = "zero2prod"
version = "0.1.0"
authors = [
  "Luca Palmieri <contact@lpalmieri.com>",
  "Alan Jenkins <alan.james.jenkins@gmail.com>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
color-eyre = "0.6.3"
config = "0.14"
reqwest = "0.12"
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio" ] }
thiserror = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
