[package]
name = "zero2prod"
version = "0.1.0"
authors = [
  "Luca Palmieri <contact@lpalmieri.com>",
  "Alan Jenkins <alan.james.jenkins@gmail.com>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
color-eyre = "0.6.5"
config = "0.15"
reqwest = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio" ] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
